<resources>
    <string name="app_name">UTS_Quizee</string>

    <!--    Loading Page-->
    <string name="let_s_go">LET\'S GO</string>

    <!--    On Boarding 1-->
    <string name="make_doing_the_questions_easier_and_more_fun">Make doing the questions easier and more fun!!</string>
    <string name="get_strated">GET STRATED</string>


    <string name="welcome_to_quizee">Welcome to Quizee</string>

    <!--    On Boarding 2-->
    <string name="enter_your_name">Enter Your Name!</string>
    <string name="start">START</string>

    <!--    Quiz Page 1-->
    <string name="Question_1">What is the IDE in the image above?</string>
    <string name="xcode">Xcode</string>
    <string name="eclipse">Eclipse</string>
    <string name="android_studio">Android Studio</string>
    <string name="visual_studio_code">Visual Studio Code</string>

    <string name="next">NEXT</string>

    <!--    Quiz Page 2-->
    <string name="Question_2">What are the main programming languages for iOS app development?</string>
    <string name="phyton">Phyton</string>
    <string name="swift">Swift</string>
    <string name="java">Java</string>
    <string name="kotlin">Kotlin</string>

    <!--    Quiz Page 3-->
    <string name="Question_3">What the operating system developed by Google for mobile devices is?</string>
    <string name="ios">IOS</string>
    <string name="windows">Windows</string>
    <string name="android">Android</string>
    <string name="linux">Linux</string>

    <!--    Quiz Page 4-->
    <string name="php">PHP</string>
    <string name="Question_4">A popular framework used for cross-platform app development is?</string>
    <string name="react_native">React Native</string>
    <string name="notepad">Notepad++</string>
    <string name="microsoft_word">Microsoft Word</string>
    <string name="unity">Unity</string>

    <!--    Quiz Page 5-->
    <string name="Question_5">Which programming languages are commonly used for Android app development?</string>
    <string name="javascript">JavaScript</string>
    <string name="html">HTML</string>
    <string name="java_and_kotlin">Java and Kotlin</string>

    <string name="submit">SUBMIT</string>

    <!--    Finish Page-->
    <string name="congratulations">Congratulations!!!</string>
    <string name="your_score">Your Score :</string>
    <string name="finish">FINISH</string>


    <string name="on_boarding1_text">make doing the questions easier and more fun !</string>
    <string name="get_started">GET STARTED</string>
</resources>