<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizPageFive"
    android:padding="20dp">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo_samping"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/iv_android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/android_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_soal_pertama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Question_5"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_android"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_opsi_pertama1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/javascript"
        android:backgroundTint="@color/secondary"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_soal_pertama"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/btn_opsi_kedua1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/html"
        android:backgroundTint="@color/secondary"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_opsi_pertama1"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btn_opsi_ketiga1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/java_and_kotlin"
        android:backgroundTint="@color/secondary"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_opsi_kedua1"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btn_opsi_keempat1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/php"
        android:backgroundTint="@color/secondary"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_opsi_ketiga1"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btn_next1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:backgroundTint="@color/primary"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_opsi_keempat1"
        android:layout_marginTop="100dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>