<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp">

        <!-- Teks Welcome -->
        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="131dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/welcome_to_quizee"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Gambar Ilustrasi -->
        <ImageView
            android:id="@+id/illustration"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/on_boarding_picture" />


        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@android:color/black"
            android:textColorHint="@color/text"
            android:background="@drawable/rectangle_2"
            android:gravity="center"
            android:layout_marginTop="24dp" />

        <Button
            android:id="@+id/btn_get_started"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/montserrat_semibold"
            android:padding="12dp"
            android:text="@string/get_started"
            android:textColor="@android:color/white"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>